--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
 <header class="header">
   <nav class="navbar">
     <div class="navbar-brand">
-      <a class="navbar-item" href="http://rodnansol.org">Rodnan Sol</a>
+      <a class="navbar-item" href="https://rodnansol.github.io">Rodnan Sol</a>
       <div class="navbar-item search hide-for-print">
         <div id="search-field" class="field">
           <input id="search-input" type="text" placeholder="Search the docs">
