--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<link rel="canonical" href="http://rodnansol.org/spring-configuration-property-documenter/latest/index.html">
+<link rel="canonical" href="https://rodnansol.github.io/spring-configuration-property-documenter/latest/index.html">
 <script>location="spring-configuration-property-documenter/latest/index.html"</script>
 <meta http-equiv="refresh" content="0; url=spring-configuration-property-documenter/latest/index.html">
 <meta name="robots" content="noindex">
 <title>Redirect Notice</title>
 <h1>Redirect Notice</h1>
-<p>The page you requested has been relocated to <a href="spring-configuration-property-documenter/latest/index.html">http://rodnansol.org/spring-configuration-property-documenter/latest/index.html</a>.</p>
+<p>The page you requested has been relocated to <a href="spring-configuration-property-documenter/latest/index.html">https://rodnansol.github.io/spring-configuration-property-documenter/latest/index.html</a>.</p>
