--- a/404.html
+++ b/404.html
@@ -59,6 +59,14 @@
 <div class="nav-panel-explore is-active" data-panel="explore">
   <ul class="components">
     <li class="component">
+      <a class="title" href="/index.html">Rodnan Sol</a>
+      <ul class="versions">
+        <li class="version is-latest">
+          <a href="/index.html">default</a>
+        </li>
+      </ul>
+    </li>
+    <li class="component">
       <a class="title" href="/spring-configuration-property-documenter/latest/index.html">Spring Configuration Property Documenter</a>
       <ul class="versions">
         <li class="version is-latest">
@@ -74,7 +82,7 @@
 <main class="article">
 <div class="toolbar" role="navigation">
 <button class="nav-toggle"></button>
-  <a href="/spring-configuration-property-documenter/latest/index.html" class="home-link"></a>
+  <a href="/index.html" class="home-link"></a>
 <nav class="breadcrumbs" aria-label="breadcrumbs">
 </nav>
 </div>
@@ -82,7 +90,7 @@
 <article class="doc">
 <h1 class="page">Page Not Found</h1>
 <div class="paragraph">
-<p>The page you&#8217;re looking for does not exist. It may have been moved. You can return to the <a href="/spring-configuration-property-documenter/latest/index.html">start page</a>, or follow one of the links in the navigation to the left.</p>
+<p>The page you&#8217;re looking for does not exist. It may have been moved. You can return to the <a href="/index.html">start page</a>, or follow one of the links in the navigation to the left.</p>
 </div>
 <div class="paragraph">
 <p>If you arrived on this page by clicking on a link, please notify the owner of the site that the link is broken.
