--- a/spring-configuration-property-documenter/latest/index.html
+++ b/spring-configuration-property-documenter/latest/index.html
@@ -16,7 +16,7 @@
       <a class="navbar-item" href="https://rodnansol.github.io">Rodnan Sol</a>
       <div class="navbar-item search hide-for-print">
         <div id="search-field" class="field">
-          <input id="search-input" type="text" placeholder="Search the docs" autofocus>
+          <input id="search-input" type="text" placeholder="Search the docs">
         </div>
       </div>
       <button class="navbar-burger" data-target="topbar-nav">
@@ -110,6 +110,14 @@
     <span class="version">latest</span>
   </div>
   <ul class="components">
+    <li class="component">
+      <a class="title" href="../../index.html">Rodnan Sol</a>
+      <ul class="versions">
+        <li class="version is-latest">
+          <a href="../../index.html">default</a>
+        </li>
+      </ul>
+    </li>
     <li class="component is-current">
       <a class="title" href="index.html">Spring Configuration Property Documenter</a>
       <ul class="versions">
@@ -126,7 +134,7 @@
 <main class="article">
 <div class="toolbar" role="navigation">
 <button class="nav-toggle"></button>
-  <a href="index.html" class="home-link is-current"></a>
+  <a href="../../index.html" class="home-link"></a>
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
     <li><a href="index.html">Spring Configuration Property Documenter</a></li>
