--- a/spring-configuration-property-documenter/latest/maven-plugin.html
+++ b/spring-configuration-property-documenter/latest/maven-plugin.html
@@ -110,6 +110,14 @@
     <span class="version">latest</span>
   </div>
   <ul class="components">
+    <li class="component">
+      <a class="title" href="../../index.html">Rodnan Sol</a>
+      <ul class="versions">
+        <li class="version is-latest">
+          <a href="../../index.html">default</a>
+        </li>
+      </ul>
+    </li>
     <li class="component is-current">
       <a class="title" href="index.html">Spring Configuration Property Documenter</a>
       <ul class="versions">
@@ -126,7 +134,7 @@
 <main class="article">
 <div class="toolbar" role="navigation">
 <button class="nav-toggle"></button>
-  <a href="index.html" class="home-link"></a>
+  <a href="../../index.html" class="home-link"></a>
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
     <li><a href="index.html">Spring Configuration Property Documenter</a></li>
