--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@
                 <a class="title" href="index.html">Home</a>
             </li>
             <li class="component">
+                <a class="title" href="jbang-catalog-document-generator/latest/index.html">JBang Catalog Document Generator</a>
+                    <ul class="versions">
+                            <li class="version is-latest">
+                                <a href="jbang-catalog-document-generator/latest/index.html">latest</a>
+                            </li>
+                    </ul>
+            </li>
+            <li class="component">
                 <a class="title" href="spring-configuration-property-documenter/latest/index.html">Spring Configuration Property Documenter</a>
                     <ul class="versions">
                             <li class="version is-latest">
