--- a/spring-configuration-property-documenter/latest/gradle-plugin.html
+++ b/spring-configuration-property-documenter/latest/gradle-plugin.html
@@ -121,6 +121,14 @@
             <li class="component">
                 <a class="title" href="../../index.html">Home</a>
             </li>
+            <li class="component">
+                <a class="title" href="../../jbang-catalog-document-generator/latest/index.html">JBang Catalog Document Generator</a>
+                    <ul class="versions">
+                            <li class="version is-latest">
+                                <a href="../../jbang-catalog-document-generator/latest/index.html">latest</a>
+                            </li>
+                    </ul>
+            </li>
             <li class="component is-current">
                 <a class="title" href="index.html">Spring Configuration Property Documenter</a>
                     <ul class="versions">
