--- a/jbang-catalog-document-generator/latest/index.html
+++ b/jbang-catalog-document-generator/latest/index.html
@@ -162,7 +162,22 @@
 <li><a href="#_markdown">Markdown</a></li>
 </ul>
 </li>
-<li><a href="#_customization_options">Customization options</a></li>
+<li><a href="#_customization_options">Customization options</a>
+<ul class="sectlevel2">
+<li><a href="#_custom_header_and_footer">Custom header and footer</a></li>
+<li><a href="#_alias_usages">Alias usages</a>
+<ul class="sectlevel3">
+<li><a href="#_result_in_asciidoc">Result in AsciiDoc</a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href="#_aliases">Aliases</a>
+<ul class="sectlevel2">
+<li><a href="#_hello">hello</a></li>
+<li><a href="#_working_directory">Working directory</a></li>
+</ul>
+</li>
 <li><a href="#_contribution">Contribution</a>
 <ul class="sectlevel2">
 <li><a href="#_fork">Fork</a></li>
@@ -223,7 +238,7 @@ Hello World</code></pre>
     },
     "rodnansol": {
       "catalog-ref": "https://github.com/rodnansol/jbang-catalog/blob/HEAD/jbang-catalog.json",
-      "description": "RodnanSol JBang Catalog"
+      "description": "Rodnan Sol JBang Catalog"
     }
   },
   "aliases": {
@@ -406,9 +421,10 @@ jobs:
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-bash hljs" data-lang="bash">java -jar jbang-catalog-document-generator-cli/target/jbang-catalog-document-generator-cli-999-SNAPSHOT.jar generate
-Usage: &lt;main class&gt; generate [-g] [-cc] [-hfdr] [-toc]
+Usage: &lt;main class&gt; generate [-g] [-cc] [-cus] [-hfdr] [-toc]
                              [-cf=&lt;customFooterFilePath&gt;]
                              [-ch=&lt;customHeaderFilePath&gt;] [-o=&lt;outputFile&gt;]
+                             [-pcn=&lt;preferredCatalogName&gt;]
                              [-t=&lt;customTemplatePath&gt;] [-toc-l=&lt;tocLevels&gt;]
                              [-toc-p=&lt;tocPlacement&gt;] [-toc-t=&lt;tocTitle&gt;]
                              [-tt=&lt;templateType&gt;] &lt;inputFile&gt;
@@ -421,6 +437,8 @@ Generates a documentation for a given jbang-catalog.json file
                     Path to a custom footer.
       -ch, --custom-header=&lt;customHeaderFilePath&gt;
                     Path to a custom header.
+      -cus, --collapsible-usage-section
+                    Defines if the usage section should be collapsible or not
   -g, --include-generation-date
                     Defines if the generation date should be put into the
                       document or not.
@@ -431,6 +449,8 @@ Generates a documentation for a given jbang-catalog.json file
   -o, --output=&lt;outputFile&gt;
                     The output AsciiDoc file name. Defaults to 'jbang-catalog.
                       adoc'
+      -pcn, --preferred-catalog-name=&lt;preferredCatalogName&gt;
+                    Defines the preferred catalog name.
   -t, --template=&lt;customTemplatePath&gt;
                     Custom template path.
       -toc, --table-of-contents
@@ -464,7 +484,12 @@ Generates a documentation for a given jbang-catalog.json file
 <div class="sect2">
 <h3 id="_docker_image"><a class="anchor" href="#_docker_image"></a>Docker image</h3>
 <div class="paragraph">
-<p>Coming soon.</p>
+<p>The tool is available within a Docker image, check the <a href="https://github.com/rodnansol/jbang-catalog-document-generator/pkgs/container/jbang-catalog-document-generator">packages</a> of the organization.</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-bash hljs" data-lang="bash">docker run -v $(pwd):/resources ghcr.io/rodnansol/jbang-catalog-document-generator:&lt;version&gt; generate /resources/jbang-catalog.json -o /resources/jbang-catalog.adoc</code></pre>
+</div>
 </div>
 </div>
 </div>
@@ -493,8 +518,90 @@ Generates a documentation for a given jbang-catalog.json file
 <div class="sect1">
 <h2 id="_customization_options"><a class="anchor" href="#_customization_options"></a>Customization options</h2>
 <div class="sectionbody">
+<div class="sect2">
+<h3 id="_custom_header_and_footer"><a class="anchor" href="#_custom_header_and_footer"></a>Custom header and footer</h3>
 <div class="paragraph">
 <p>Custom header and custom footer can be attached to make sure introductions and other important stuff can be put into the final document.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_alias_usages"><a class="anchor" href="#_alias_usages"></a>Alias usages</h3>
+<div class="paragraph">
+<p>The alias entries can be extended with a help/usage section where the usage of the script can have a detailed description, for example if it is a CLI application the usage of the app or the flags can be put here.</p>
+</div>
+<div class="listingblock">
+<div class="title">Example jbang-catalog.json</div>
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-json hljs" data-lang="json">{
+  "aliases": {
+    "hello": {
+      "script-ref": "hello.java",
+      "description": "Script that says hello back for each argument"
+    }
+  }
+}</code></pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">hello.txt</div>
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-txt hljs" data-lang="txt">This is a usage file, that will be rendered below the `hello` alias entry.
+
+!%$&amp;@ So you want to use this script? !%$&amp;@
+
+&lt; Let me show you how you can use it. &gt;</code></pre>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_result_in_asciidoc"><a class="anchor" href="#_result_in_asciidoc"></a>Result in AsciiDoc</h4>
+
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_aliases"><a class="anchor" href="#_aliases"></a>Aliases</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_hello"><a class="anchor" href="#_hello"></a>hello</h3>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-bash hljs" data-lang="bash">jbang hello &lt;scriptOrFile&gt;</code></pre>
+</div>
+</div>
+<div class="sidebarblock">
+<div class="content">
+Script that says hello back for each argument
+</div>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-bash hljs" data-lang="bash">This is a usage file, that will be rendered below the `hello` alias entry.
+
+!%$&amp;@ So you want to use this script? !%$&amp;@
+
+&lt; Let me show you how you can use it. &gt;</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>It can put behind a collapsible section with the <code>-cus</code> (<code>--collapsible-usage-section</code>) flag.</p>
+</div>
+<hr>
+</div>
+<div class="sect2">
+<h3 id="_working_directory"><a class="anchor" href="#_working_directory"></a>Working directory</h3>
+<div class="paragraph">
+<p>Since the 0.2.0 version the current working directory can be overwritten which can help you to read the usages from a different path if you wish. It can be overwritten with the <code>-Dapp.document.current-working-directory=</code> flag when using the <code>java</code> command.</p>
+</div>
+<div class="listingblock">
+<div class="title">Example</div>
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-bash hljs" data-lang="bash">java -Dapp.document.current-working-directory=new-working/directory -jar jbang-catalog-document-generator-cli.jar generate jbang-catalog.json</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>In this case the <strong>alias</strong> usages will be read from the <strong>new-working/directory</strong> folder.</p>
+</div>
 </div>
 </div>
 </div>
