deploy: f9d179db22ddd761f50ecbbf2d5d71c8a0c12f2d

--- a/index.html
+++ b/index.html
@@ -69,12 +69,20 @@
     <div class="panels">
 <div class="nav-panel-explore is-active" data-panel="explore">
         <div class="context">
-            <span class="title">Home</span>
+            <span class="title">0. Home</span>
             <span class="version">default</span>
         </div>
     <ul class="components">
             <li class="component is-current">
-                <a class="title" href="index.html">Home</a>
+                <a class="title" href="index.html">0. Home</a>
+            </li>
+            <li class="component">
+                <a class="title" href="commit-teller/latest/index.html">Commit Teller</a>
+                    <ul class="versions">
+                            <li class="version is-latest">
+                                <a href="commit-teller/latest/index.html">latest</a>
+                            </li>
+                    </ul>
             </li>
             <li class="component">
                 <a class="title" href="jbang-catalog-document-generator/latest/index.html">JBang Catalog Document Generator</a>
