--- a/404.html
+++ b/404.html
@@ -60,7 +60,15 @@
 <div class="nav-panel-explore is-active" data-panel="explore">
     <ul class="components">
             <li class="component">
-                <a class="title" href="/index.html">Home</a>
+                <a class="title" href="/index.html">0. Home</a>
+            </li>
+            <li class="component">
+                <a class="title" href="/commit-teller/latest/index.html">Commit Teller</a>
+                    <ul class="versions">
+                            <li class="version is-latest">
+                                <a href="/commit-teller/latest/index.html">latest</a>
+                            </li>
+                    </ul>
             </li>
             <li class="component">
                 <a class="title" href="/jbang-catalog-document-generator/latest/index.html">JBang Catalog Document Generator</a>
