--- a/jbang-catalog-document-generator/latest/examples.html
+++ b/jbang-catalog-document-generator/latest/examples.html
@@ -89,7 +89,15 @@
         </div>
     <ul class="components">
             <li class="component">
-                <a class="title" href="../../index.html">Home</a>
+                <a class="title" href="../../index.html">0. Home</a>
+            </li>
+            <li class="component">
+                <a class="title" href="../../commit-teller/latest/index.html">Commit Teller</a>
+                    <ul class="versions">
+                            <li class="version is-latest">
+                                <a href="../../commit-teller/latest/index.html">latest</a>
+                            </li>
+                    </ul>
             </li>
             <li class="component is-current">
                 <a class="title" href="index.html">JBang Catalog Document Generator</a>
