deploy: f9d179db22ddd761f50ecbbf2d5d71c8a0c12f2d

--- a/spring-configuration-property-documenter/latest/maven-plugin.html
+++ b/spring-configuration-property-documenter/latest/maven-plugin.html
@@ -14,7 +14,6 @@
     <meta property="og:title" content="Spring Configuration Property Documenter - Maven Plugin">
     <meta property="og:image" content="https://rodnansol.github.io/_images/rodnan-sol-logo.png">
     <meta name="twitter:site" content="@rodnansol">
-    <script>var uiRootPath = '../../_'</script>
     <link rel="icon" href="../../_/img/favicon.ico" type="image/x-icon">
   </head>
   <body class="article">
@@ -617,6 +616,13 @@
 <td class="tableblock halign-left valign-top"><p class="tableblock">Empty list - Everything will be included</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">0.4.0</p></td>
 </tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">failOnMissingInput</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Defines if the build should fail if the input file is missing/not existing.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Yes</p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">0.7.0</p></td>
+</tr>
 </tbody>
 </table>
 </div>
@@ -749,6 +755,13 @@
 <td class="tableblock halign-left valign-top"><p class="tableblock">No</p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">0.2.1</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">failOnMissingInput</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Defines if the build should fail if any of the input files are missing/not existing.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Yes</p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">0.7.0</p></td>
 </tr>
 </tbody>
 </table>
