--- a/spring-configuration-property-documenter/latest/index.html
+++ b/spring-configuration-property-documenter/latest/index.html
@@ -14,7 +14,6 @@
     <meta property="og:title" content="Spring Configuration Property Documenter - Spring Configuration Property Documenter">
     <meta property="og:image" content="https://rodnansol.github.io/_images/rodnan-sol-logo.png">
     <meta name="twitter:site" content="@rodnansol">
-    <script>var uiRootPath = '../../_'</script>
     <link rel="icon" href="../../_/img/favicon.ico" type="image/x-icon">
   </head>
   <body class="article">
@@ -466,7 +465,7 @@ If you are using Spring with Quarkus, you can use this tool as well, please chec
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-bash hljs" data-lang="bash">mvn clean package  \
-  org.rodnansol:spring-configuration-property-documenter-maven-plugin:0.6.1:generate-property-document \
+  org.rodnansol:spring-configuration-property-documenter-maven-plugin:0.7.0:generate-property-document \
   -Dtype=ADOC</code></pre>
 </div>
 </div>
@@ -482,7 +481,7 @@ If you are using Spring with Quarkus, you can use this tool as well, please chec
 <pre class="highlightjs highlight"><code class="language-xml hljs" data-lang="xml">&lt;plugin&gt;
     &lt;groupId&gt;org.rodnansol&lt;/groupId&gt;
     &lt;artifactId&gt;spring-configuration-property-documenter-maven-plugin&lt;/artifactId&gt;
-    &lt;version&gt;0.6.1&lt;/version&gt;
+    &lt;version&gt;0.7.0&lt;/version&gt;
     &lt;executions&gt;
         &lt;execution&gt;
             &lt;id&gt;generate-adoc-without-deprecation-and-type&lt;/id&gt;
@@ -632,7 +631,7 @@ Don&#8217;t worry, we have a Gradle plugin as well, check it out <a href="gradle
 <div class="ulist">
 <ul>
 <li>
-<p>To build the project just run: <code>mvn verify -Pbuild</code> - The <code>build</code> profile is required to access the Gradle dependencies</p>
+<p>To build the project just run: <code>mvn verify</code></p>
 </li>
 <li>
 <p>If you want to build the samples run: <code>mvn install</code> and then <code>mvn package -f samples/pom.xml</code></p>
